# ESPR

./: .gitattributes  .gitmodules  README.md  SETUP.md
backend/: .gitignore  app.py  compiled_code.json  pyproject.toml
backend/artifacts/: Package.json  PackageManager.json
blockchain/: .gitignore
blockchain/src/: Counter.sol  packageContract.sol
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.module.css  page.tsx
frontend/app/browse/: page.module.css  page.tsx
frontend/app/publish/: abi.js  page.module.css  page.tsx
frontend/app/publish/success/: page.tsx
frontend/app/update/: packAbi.js  page.module.css  page.tsx
frontend/app/update/success/: page.tsx
