[tool.poetry]
name = "acmcyber-csrf-blockchain-pkg-manager-backend"
version = "0.1.0"
description = ""
authors = []
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
web3 = "^6.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
